# api-gateway/internal/api/http/request/auth.go
@@ -12,3 +12,7 @@ type LoginRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type RefreshRequest struct {
+	RefreshToken string `json:"refreshToken"`
+}
