# auth-service/internal/domain/model/response.go
@@ -2,6 +2,6 @@ package model
 
 type AuthResponse struct {
 	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token,omitempty"` // omitempty т.к. может не возвращаться в ответе
+	RefreshToken string `json:"refresh_token"` // т.к. может не возвращаться в ответе
 	User         *User  `json:"user"`
 }
